--- a/app/views/custom_products/new.html.erb
+++ b/app/views/custom_products/new.html.erb
@@ -5,7 +5,7 @@
 <div id="custom_product_content">
 	<h1>New Custom Product</h1>
 
-	<%= render 'form2' %>
+	<%= render 'form' %>
 </div>
 
 <%= link_to 'Back', custom_products_path %>
