add show option on mouseover

--- a/app/views/custom_products/_form.html.erb
+++ b/app/views/custom_products/_form.html.erb
@@ -89,7 +89,7 @@
 
     <div id="interior_options">
 
-    <% int_materials = ["black chromexcel", "rust chromexcel", "natural chromexcel", "brown sierra", "natural vermont", "grey chevre", "navy chevre", "cerulean chevre", "maroon chevre", "crimson chevre", "yellow chevre"] %>
+    <% int_materials = ["black chromexcel", "rust chromexcel", "natural chromexcel", "brown sierra", "natural vermont", "grey chevre", "navy chevre", "azure chevre", "maroon chevre", "crimson chevre", "yellow chevre"] %>
 
       <p>Interior</p>
    
