tweak form values

--- a/app/views/custom_products/_form.html.erb
+++ b/app/views/custom_products/_form.html.erb
@@ -46,18 +46,17 @@
         <%= label_tag :exterior %><br>
         <span id="exterior_materials_label"></span><br>
         <%= radio_button_tag "exterior_materials", "black chromexcel" %>
-        <%= radio_button_tag "exterior_materials", "blue chromexcel" %>
+        <%= radio_button_tag "exterior_materials", "marine chromexcel" %>
         <%= radio_button_tag "exterior_materials", "oxblood chromexcel" %>
-        <%= radio_button_tag "exterior_materials", "brown chromexcel" %>
+        <%= radio_button_tag "exterior_materials", "coffee chromexcel" %>
         <%= radio_button_tag "exterior_materials", "natural chromexcel" %>
         <%= radio_button_tag "exterior_materials", "natural dublin" %>
         <%= radio_button_tag "exterior_materials", "natural essex" %>
-        <%= radio_button_tag "exterior_materials", "tan shell cordovan" %>
+        <%= radio_button_tag "exterior_materials", "rust shell cordovan" %>
         <%= radio_button_tag "exterior_materials", "black shell cordovan" %>
         <%= radio_button_tag "exterior_materials", "navy shell cordovan" %>
-        <%= radio_button_tag "exterior_materials", "tan shell cordovan" %>
         <%= radio_button_tag "exterior_materials", "black shark" %>
-        <%= radio_button_tag "exterior_materials", "brown shark" %>
+        <%= radio_button_tag "exterior_materials", "coffee shark" %>
         <%= radio_button_tag "exterior_materials", "natural lizard" %>
       </div>
 
@@ -89,7 +88,7 @@
 
     <div id="interior_options">
 
-    <% int_materials = ["black chromexcel", "rust chromexcel", "natural chromexcel", "brown sierra", "natural vermont", "grey chevre", "navy chevre", "azure chevre", "maroon chevre", "crimson chevre", "yellow chevre"] %>
+    <% int_materials = ["black chromexcel", "rust chromexcel", "natural chromexcel", "coffee sierra", "natural vermont", "grey chevre", "navy chevre", "azure chevre", "maroon chevre", "crimson chevre", "lemon chevre"] %>
 
       <p>Interior</p>
    
