add policies page, update notebook upcharge

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -12,8 +12,8 @@
 	</div>
 	<div id="pages_nav">
 		<%= link_to "Catalog", products_path %>
-		<%= link_to "Custom", page_custom_path %>
-		<%= link_to "About", page_about_path %>
+		<%= link_to "Custom", custom_path %>
+		<%= link_to "About", about_path %>
 	</div>
 </nav>
 
