--- a/app/views/page/about.html.erb
+++ b/app/views/page/about.html.erb
@@ -1,2 +1,13 @@
-<h1>Page#about</h1>
-<p>Find me in app/views/page/about.html.erb</p>
+<h1>About</h1>
+
+<div id="about_content">
+	<img></img>
+	<p>Decade handcrafts exceptional leather goods.</p>
+
+	<p>Every piece that leaves my workshop is cut, stitched, and finished by hand from the finest American and European materials. My work is guaranteed for life.</p>
+
+	<p>Handmade in Chicago, Illinois, USA</p>
+	<a href="mailto:info@decadeleather.com">Email</a>
+	<%= link_to "Policies", policies_path %>
+</div>
+
