add mock policies

--- a/app/views/page/about.html.erb
+++ b/app/views/page/about.html.erb
@@ -4,7 +4,7 @@
 	<img></img>
 	<p>Decade handcrafts exceptional leather goods.</p>
 
-	<p>Every piece that leaves my workshop is cut, stitched, and finished by hand from the finest American and European materials. My work is guaranteed for life.</p>
+	<p>Every piece that leaves my workshop is cut, stitched, and finished by hand from the finest American and European materials, and guaranteed for a decade.</p>
 
 	<p>Handmade in Chicago, Illinois, USA</p>
 	<a href="mailto:info@decadeleather.com">Email</a>
