--- a/app/views/page/policies.html.erb
+++ b/app/views/page/policies.html.erb
@@ -1,2 +1,15 @@
-<h1>Page#policies</h1>
-<p>Find me in app/views/page/policies.html.erb</p>
+<h1>Policies</h1>
+<h2>Refunds & Exchanges</h2>
+<p>Decade stands behind its craftsmanship and will issue refunds and/or replacements on unused leather goods due to defective manufacturing or craftsmanship.</p>
+<p>All sales are final. Due to the nature of custom leatherwork, refunds will not be issued for used items or for reasons other than defective manufacturing.</p>
+<p>Shipping, Paypal and other fees are nonrefundable.</p><br>
+
+<h2>Shipping</h2>
+<p>Decade ships parcels First Class through the United States Postal Service.<p>
+<p>All other shipping arrangements must be made prior to purchase. Contact us by email or on the web for more information.</p>
+
+<h2>Made-to-Order & Custom</h2>
+<p>All leather goods, with the exception of custom products, are in-stock unless otherwise noted. Custom products require a 3-5 week production time.</p>
+
+<h2>Additional Terms</h2>
+<p>Due to the variations in screen calibrations, the actual color of your leather goods may differ from its appearance on your screen.</p>
