--- a/app/views/page/about.html.erb
+++ b/app/views/page/about.html.erb
@@ -4,10 +4,10 @@
 	<img></img>
 	<p>Decade handcrafts exceptional leather goods.</p>
 
-	<p>Every piece that leaves my workshop is cut, stitched, and finished by hand from the finest American and European materials, and guaranteed for a decade.</p>
+	<p>Every piece that leaves my workshop is cut, stitched, and finished by hand from the finest American and European materials. All products are guaranteed for a decade.</p>
 
 	<p>Handmade in Chicago, Illinois, USA</p>
-	<a href="mailto:info@decadeleather.com">Email</a>
+	<%= link_to "Email", "mailto:info@decadeleather.com" %>
 	<%= link_to "Policies", policies_path %>
 </div>
 
