separate catalog page from admin CRUD

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -11,7 +11,7 @@
 		<%= link_to "Decade", root_path %>
 	</div>
 	<div id="pages_nav">
-		<%= link_to "Catalog", products_path %>
+		<%= link_to "Catalog", catalog_path %>
 		<%= link_to "Custom", custom_path %>
 		<%= link_to "About", about_path %>
 	</div>
