add currency notification

--- a/app/views/custom_products/_form.html.erb
+++ b/app/views/custom_products/_form.html.erb
@@ -210,6 +210,7 @@
       
       <div id="currency">
         <%= label_tag :currency %><br>
+        <span id="currency_notice">Dimensions of foreign currency wallets may differ from image.<br></span>
         <%= select_tag :currency,  options_for_select(["US Dollars", "British Pounds", "Euro", "Japanese Yen"]) %>
       </div>
     </div>
