--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -123,8 +123,14 @@
 	z-index: 13;
 }
 
-span {
+#exterior_options span, #interior_options span, #pocket_options span {
 
 	text-transform: capitalize;
+
+}
+
+#currency_notice {
+
+	display: none;
 
 }
