--- a/app/views/page/catalog.html.erb
+++ b/app/views/page/catalog.html.erb
@@ -1,5 +1,5 @@
 <h1>Catalog</h1>
-<div id="styles">
+<div id="style_nav">
   <ul>
     <li>All</li>
     <li>Billfolds</li>
@@ -9,25 +9,19 @@
     <li>Notebooks</li>
   </ul>
 </div>
-<table>
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th>Image url</th>
-      <th>Price</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @products.each do |product| %>
-      <tr>
-        <td><%= product.name %></td>
-        <td><%= product.image_url %></td>
-        <td><%= product.price %></td>
-        <td><%= link_to 'Show', product %></td>
-        <td><a href="/cart/<%= product.id %>">Add to Cart</a></td>
-      </tr>
+<div id="product_list">
+  <% @products.each do |product| %>
+    <% if product.stock > 0 %>
+      <div class="<%= product.category %>">
+        <%= link_to product do %>
+          <%= image_tag(product.image_url, :alt => product.name) %>
+        <% end %>
+        <div class="product_info">
+          <%= product.name %>
+          <%= product.price %>
+          <a href="/cart/<%= product.id %>">Add to Cart</a>
+        </div>
+      </div>
     <% end %>
-  </tbody>
-</table>
+  <% end %>
+</div>
