style styles_nav

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -134,3 +134,22 @@
 	display: none;
 
 }
+
+#style_nav {
+
+	float: left;
+
+}
+
+
+#style_nav ul {
+
+	list-style: none;
+
+}
+
+footer {
+
+	width: 100%;
+
+}
