--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,4 +1,4 @@
-<footer>
+<footer class="footer">
 	<%= link_to "Instagram", "https://www.instagram.com/decadeleather/" %>
 	<%= link_to "Facebook", "https://www.facebook.com/decadeleather" %>
 	<%= link_to "Twitter", "https://twitter.com/DecadeLeather" %>
