--- a/app/views/page/about.html.erb
+++ b/app/views/page/about.html.erb
@@ -4,7 +4,7 @@
 	<img></img>
 	<p>Decade handcrafts exceptional leather goods.</p>
 
-	<p>Every piece that leaves my workshop is cut, stitched, and finished by hand from the finest American and European materials. All products are guaranteed for a decade.</p>
+	<p>Every piece that leaves my workshop is cut, stitched, and finished by hand from the finest American and European materials. All products are guaranteed for this decade and the next.</p>
 
 	<p>Handmade in Chicago, Illinois, USA</p>
 	<%= link_to "Email", "mailto:info@decadeleather.com" %>
