--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -4,6 +4,7 @@
 	<% else %>
 		<%= link_to "Sign in", new_user_session_path %>
 	<% end %>
+	<%= link_to "Cart", cart_path %>
 </nav>
 
 <nav id="nav">
