fix destroyed custom_product bug

--- a/app/views/cart/index.html.erb
+++ b/app/views/cart/index.html.erb
@@ -14,9 +14,10 @@
 		<% product = CustomProduct.find_by_id(id) %>
 	<% end %>
 
-	<li>
 
+	<li>
 		<%= link_to product.name, product %>
+		<p> <%= product %> </p>
 		<p>Quantity: <%= quantity %></p>
 		<p>Price: <%= number_to_currency(product.price, :unit => '$') %></p>
 		<a href="/cart/<%= product.id %>/remove">Remove from cart</a>
