--- a/app/views/custom_products/show.html.erb
+++ b/app/views/custom_products/show.html.erb
@@ -14,6 +14,11 @@
 </p>
 
 <p>
+  <strong>Stock:</strong>
+  <%= @custom_product.stock.to_s %>
+</p>
+
+<p>
   <strong>User:</strong>
   <%= @custom_product.user_id %>
 </p>
