--- a/app/views/page/catalog.html.erb
+++ b/app/views/page/catalog.html.erb
@@ -19,7 +19,7 @@
         <div class="product_info">
           <%= product.name %>
           <%= product.price %>
-          <a href="/cart/<%= product.id %>">Add to Cart</a>
+          <a href="/cart/<%= product.id %>?type=product">Add to Cart</a>
         </div>
       </div>
     <% end %>
