--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -5,7 +5,7 @@
 <div id="product_info">
   <h1><%= @product.name %><h1><br>
   <%= number_to_currency(@product.price, :unit => '$') %>
-  <a href="/cart/<%= @product.id %>">Add to Cart</a><br>
+  <a href="/cart/<%= @product.id %>?type=product">Add to Cart</a><br>
   <%= @product.short_description %><br>
   <p>Dimensions: <%= @product.dimensions %></p>
   <p>Category: <%= @product.category %></p>  
