--- a/app/views/custom_products/_form.html.erb
+++ b/app/views/custom_products/_form.html.erb
@@ -50,18 +50,31 @@
         <%= label_tag :exterior %><br>
         <span id="exterior_materials_label"></span><br>
         <%= radio_button_tag "exterior_materials", "black chromexcel" %>
+        <%= label_tag :exterior_materials_black_chromexcel, '', :class => 'label_swatch', :style => 'background-color: #333', :alt => 'Black Chromexcel' %>
         <%= radio_button_tag "exterior_materials", "marine chromexcel" %>
+        <%= label_tag :exterior_materials_marine_chromexcel, '', :class => 'label_swatch', :style => 'background-color: #006080', :alt => 'Marine Chromexcel' %>
         <%= radio_button_tag "exterior_materials", "oxblood chromexcel" %>
+        <%= label_tag :exterior_materials_oxblood_chromexcel, '', :class => 'label_swatch', :style => 'background-color: #660000', :alt => 'Oxblood Chromexcel' %>
         <%= radio_button_tag "exterior_materials", "coffee chromexcel" %>
+        <%= label_tag :exterior_materials_coffee_chromexcel, '', :class => 'label_swatch', :style => 'background-color:  #4d2800', :alt => 'Coffee Chromexcel' %>
         <%= radio_button_tag "exterior_materials", "natural chromexcel" %>
+        <%= label_tag :exterior_materials_natural_chromexcel, '', :class => 'label_swatch', :style => 'background-color:  #663500', :alt => 'Natural Chromexcel' %>
         <%= radio_button_tag "exterior_materials", "natural dublin" %>
+        <%= label_tag :exterior_materials_natural_dublin, '', :class => 'label_swatch', :style => 'background-color:  #663500', :alt => 'Natural Dublin' %>        
         <%= radio_button_tag "exterior_materials", "natural essex" %>
-        <%= radio_button_tag "exterior_materials", "rust shell cordovan" %>
+        <%= label_tag :exterior_materials_natural_essex, '', :class => 'label_swatch', :style => 'background-color:  #ffdd99', :alt => 'Natural Essex' %>
         <%= radio_button_tag "exterior_materials", "black shell cordovan" %>
+        <%= label_tag :exterior_materials_black_shell_cordovan, '', :class => 'label_swatch', :style => 'background-color: #333', :alt => 'Black Shell Cordovan' %>
         <%= radio_button_tag "exterior_materials", "navy shell cordovan" %>
+        <%= label_tag :exterior_materials_navy_shell_cordovan, '', :class => 'label_swatch', :style => 'background-color: #000066', :alt => 'Navy Shell Cordovan' %>
+        <%= radio_button_tag "exterior_materials", "rust shell cordovan" %>
+        <%= label_tag :exterior_materials_rust_shell_cordovan, '', :class => 'label_swatch', :style => 'background-color: #b37700', :alt => 'Rust Shell Cordovan' %>        
         <%= radio_button_tag "exterior_materials", "black shark" %>
+        <%= label_tag :exterior_materials_black_shark, '', :class => 'label_swatch', :style => 'background-color: #333', :alt => 'Black Shark' %>
         <%= radio_button_tag "exterior_materials", "coffee shark" %>
+        <%= label_tag :exterior_materials_coffee_shark, '', :class => 'label_swatch', :style => 'background-color:  #4d2800', :alt => 'Coffee Shark' %>
         <%= radio_button_tag "exterior_materials", "natural lizard" %>
+        <%= label_tag :exterior_materials_natural_lizard, '', :class => 'label_swatch', :style => 'background-color:  #fff7e6', :alt => 'Natural Lizard' %>
       </div>
 
       <div id="corners">
